; ModuleID = '/home/carl/AnghaBench/mongoose/src/common/platforms/esp/extr_stub_flasher.c_add_byte.c'
source_filename = "/home/carl/AnghaBench/mongoose/src/common/platforms/esp/extr_stub_flasher.c_add_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, %struct.data_buf* }
%struct.data_buf = type { i64, i32* }

@ub = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@BUF_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @add_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_byte(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.data_buf*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.data_buf*, %struct.data_buf** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ub, i32 0, i32 2), align 8
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ub, i32 0, i32 0), align 8
  %6 = getelementptr inbounds %struct.data_buf, %struct.data_buf* %4, i64 %5
  store %struct.data_buf* %6, %struct.data_buf** %3, align 8
  %7 = load %struct.data_buf*, %struct.data_buf** %3, align 8
  %8 = getelementptr inbounds %struct.data_buf, %struct.data_buf* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @BUF_SIZE, align 8
  %11 = icmp slt i64 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  %14 = load %struct.data_buf*, %struct.data_buf** %3, align 8
  %15 = getelementptr inbounds %struct.data_buf, %struct.data_buf* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = load %struct.data_buf*, %struct.data_buf** %3, align 8
  %18 = getelementptr inbounds %struct.data_buf, %struct.data_buf* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %19, 1
  store i64 %20, i64* %18, align 8
  %21 = getelementptr inbounds i32, i32* %16, i64 %19
  store i32 %13, i32* %21, align 4
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ub, i32 0, i32 1), align 8
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ub, i32 0, i32 1), align 8
  br label %24

24:                                               ; preds = %12, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
